--- a/Index.html
+++ b/Index.html
@@ -129,6 +129,10 @@ marketing, and audience engagement</p>
                     <h3>Blockchain SCM System Analysis</h3>
                     <p>Analyzed a blockchain solution to improve supply chain efficiency by 40% by creating an immutable ledger for product movement and recall, simulating real-world scenarios to evaluate the proposed system.</p>
                 </div>
+                                <div class="card">
+                    <h3>Blockchain SCM System Analysis</h3>
+                    <p>Analyzed a blockchain solution to improve supply chain efficiency by 40% by creating an immutable ledger for product movement and recall, simulating real-world scenarios to evaluate the proposed system.</p>
+                </div>
                 <div class="card">
                     <h3>Competitor Analysis for ICEMA</h3>
                     <p>Conducted a comprehensive competitor analysis using export-import datasets from Volza and EXIM databases to benchmark ICEMA member companies against global and domestic competitors.</p>
@@ -219,4 +223,5 @@ marketing, and audience engagement</p>
     
     <script src="index.js"></script>
 </body>
+
 </html>
