--- a/Index.html
+++ b/Index.html
@@ -126,8 +126,8 @@ marketing, and audience engagement</p>
             <h2 class="section-title">Key Projects</h2>
             <div class="card-grid">
                 <div class="card">
-                    <h3>Blockchain SCM System Analysis</h3>
-                    <p>Analyzed a blockchain solution to improve supply chain efficiency by 40% by creating an immutable ledger for product movement and recall, simulating real-world scenarios to evaluate the proposed system.</p>
+                    <h3>EV Strategy for Supply Chain Planning</h3>
+                    <p>Currently conducting an in-depth study on integrating Electric Vehicles into supply chain operations. The project focuses on optimizing route efficiency, evaluating chargin</p>
                 </div>
                                 <div class="card">
                     <h3>Blockchain SCM System Analysis</h3>
@@ -225,3 +225,4 @@ marketing, and audience engagement</p>
 </body>
 
 </html>
+
