--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,9 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#leadership">Leadership</a></li>
             </ul>
+            <div class="hamburger-menu" id="hamburger-icon" aria-label="Open navigation menu" role="button">
+            <i class="fas fa-bars"></i>
+        </div>
         </nav>
     </header>
 
@@ -225,6 +228,7 @@ marketing, and audience engagement</p>
 </body>
 
 </html>
+
 
 
 
